force-app/main/default/objects/numm__Entrepot__c/numm__Entrepot__c.object-meta.xml
<CustomObject>
    <label>Entrepot</label>
    <nameField>
        <label>Entrepot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entrepots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>