force-app/main/default/objects/numm__Entrepot__c/fields/numm__Capacite__c.field-meta.xml
<CustomField>
    <fullName>numm__Capacite__c</fullName>
    <label>Capacité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>