force-app/main/default/objects/numm__Entrepot__c/fields/numm__Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entrepots</relationshipLabel>
    <relationshipName>Entrepots</relationshipName>
    <type>Lookup</type>
</CustomField>