force-app/main/default/objects/numm__Entrepot__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Entrepots</relationshipLabel>
    <relationshipName>Entrepots</relationshipName>
    <type>Lookup</type>
</CustomField>