force-app/main/default/objects/numm__Entrepot__c/fields/numm__Site__c.field-meta.xml
<CustomField>
    <fullName>numm__Site__c</fullName>
    <label>Site</label>
    <referenceTo>numm__Site__c</referenceTo>
    <relationshipLabel>Entrepots</relationshipLabel>
    <relationshipName>Entrepots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>